k8s/merbis-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merbis-web-ingress
  namespace: mersin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: merbis.mersin.bel.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: merbis-web
            port:
              number: 80
  tls:
  - hosts:
    - merbis.mersin.bel.tr
    secretName: mersin-tls
